# claude-task-master

./: .gitignore  README-task-master.md  README.md  TaskMaster.md  pyproject.toml
migrations/: README.md
services/: __init__.py
services/planner/: __init__.py
services/planner/app/: __init__.py  config.py  main.py
services/planner/app/api/: __init__.py  deps.py  executor_callbacks.py  plans.py
services/planner/app/auth/: oidc.py
services/planner/app/domain/: ai_client.py  budget.py  cards.py  ccs.py  coverage.py  deps_be.py  deps_db.py  deps_fe.py  ingest.py  plan_builder.py  planner_service.py  report.py  types.py
services/planner/app/observability/: otel.py
services/planner/app/persistence/: db.py  models.py  storage.py
tests/planner/: test_budget_partitioning.py  test_planner_api.py
