[project]
name = "taskmaster-planner"
version = "0.1.0"
description = "Headless TaskMaster planner service"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "TaskMaster Maintainers"}]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.1.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "python-json-logger>=2.0.7",
  "pgvector>=0.2.5",
  "tiktoken>=0.6.0",
  "tokenizers>=0.15.2",
  "openapi-spec-validator>=0.7.1",
  "python-dateutil>=2.8.2",
  "networkx>=3.2.1",
  "numpy>=1.26.4",
  "redis>=5.0.3",
  "aioboto3>=12.3.0",
  "aiosqlite>=0.19.0",
  "structlog>=23.2.0",
  "Authlib>=1.3.0",
  "opentelemetry-sdk>=1.23.0",
  "opentelemetry-instrumentation-fastapi>=0.44b0",
  "opentelemetry-exporter-otlp>=1.23.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.5",
  "anyio>=4.3.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
  "services"
]
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
